--- a/Glass/Painel.master
+++ b/Glass/Painel.master
@@ -1,5 +1,5 @@
 <%@ Master Language="C#" MasterPageFile="~/Layout.master" AutoEventWireup="true"
-    CodeBehind="Painel.master.cs" Inherits="Glass.UI.Web.Painel" EnableViewState="false" %>
+    CodeBehind="Painel.master.cs" Inherits="Glass.UI.Web.Painel" %>
 
 <asp:Content ID="Menu" ContentPlaceHolderID="Menu" runat="server">
     <div style="display: none">
@@ -40,7 +40,9 @@
 
                         window.location.reload();
                     } else {
-                        menu.parentNode.style.display = "";
+                        $().ready(function () {
+                            menu.parentNode.style.display = "";
+                        });
                     }
                 }
             }
