#546 Alterações no DTO de endereço para inclusão do campo de complemento.
Inclui alteração no projeto de backend para que o XML da documentação também seja incluído no pacote de atualização da versão.

--- a/Glass/Vue/_Compartilhado/Templates/CampoEndereco.html
+++ b/Glass/Vue/_Compartilhado/Templates/CampoEndereco.html
@@ -11,6 +11,12 @@
         </label>
         <input type="text" v-model="enderecoAtual.logradouro" style="width: 200px" v-bind="$attrs">
     </span>
+    <span class="form-group" v-if="exibirComplemento">
+        <label>
+            Complemento
+        </label>
+        <input type="text" v-model="enderecoAtual.complemento" style="width: 80px" v-bind="$attrs">
+    </span>
     <span class="form-group">
         <label>
             Bairro
