--- a/Glass/Vue/_Compartilhado/Templates/Base/ListaSelecaoMultipla.html
+++ b/Glass/Vue/_Compartilhado/Templates/Base/ListaSelecaoMultipla.html
@@ -1,4 +1,4 @@
-﻿<span style="cursor: default; display: inline-grid; min-width: 110px">
+﻿<span style="cursor: default; display: inline-grid; min-width: 110px" class="lista-selecao-multipla">
     <span style="-appearance: searchfield; overflow: hidden; padding: 1px 0 0 2px" v-on:click="alternarOpcoes">
         <span style="min-width: 110px;">
             <div style="float: right; -appearance: menulist-button; width: 16px; height: 18px"></div>
@@ -7,7 +7,7 @@
             </span>
         </span>
     </span>
-    <div style="display: none; position: absolute; margin-top: 18px; background-color: white; z-index: 1">
+    <div style="display: none; position: absolute; margin-top: 21px; background-color: white; z-index: 1">
         <div style="-appearance: searchfield; padding: 1px 1px 0 0">
             <div style="overflow-x: hidden; overflow-y: auto; max-height: 170px; padding: 2px 0; text-align: left">
                 <div v-for="item in itens" style="padding: 0 5px">
