#665 Alterações no CSS para posicionamento dos checkbox no filtro da tela
Inclui ajuste no texto de ajuda do campo 'Buscar contas' para posicionamento

--- a/Glass/Style/Geral.css
+++ b/Glass/Style/Geral.css
@@ -382,6 +382,11 @@ section {
       padding: 0;
     }
 
+    div.filtros span > input[type="checkbox"], section.filtros span > input[type="checkbox"] {
+      position: relative;
+      top: 3px;
+    }
+
     div.filtros .botaoPesquisar, section.filtros .botaoPesquisar {
       position: relative;
       top: 2px;
