#660 Refatoração da solução de patch, para melhoria de legibilidade e manutenibilidade

--- a/Glass/Vue/Pedidos/Templates/CadPedido.Ambientes.html
+++ b/Glass/Vue/Pedidos/Templates/CadPedido.Ambientes.html
@@ -111,7 +111,7 @@
                 </td>
                 <td v-if="pedidoMaoDeObra">
                     <span v-if="item.produtoMaoDeObra">
-                        {{ item.produtoMaoDeObra.redondo | simNao }}
+                        {{ item.produtoMaoDeObra.redondo | indicaMarcado }}
                     </span>
                 </td>
                 <td>
